--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.6",
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
+    "dayjs": "^1.10.7",
+    "graphql": "^16.2.0",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "sass": "^1.45.1"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
